# bootcamp_crudplus

./: README.md  exemplo01.py  exemplo02.py  meubanco.db  pyproject.toml
