[project]
name = "crudplus"
version = "0.1.0"
description = ""
authors = [
    {name = "jfavarin",email = "favarin.jonas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
